Admin panel and form registration

--- a/locales/en.json
+++ b/locales/en.json
@@ -19,6 +19,32 @@
     "logout": "Logout",
     "authorization": "Authorization"
   },
+  "authAndReg": {
+    "titleSignIn": "Sign-In",
+    "titleRegisterPage": "Registration page",
+    "itemRegisterPage": "Registration",
+    "btnLogin": "Sign-In",
+    "titleIndividual": "Create account as an individual",
+    "lastName": "Last name",
+    "firstName": "First name",
+    "patronymic": "Patronymic",
+    "selectCity": "Enter the city",
+    "phone": "Phone",
+    "email": "Email",
+    "password": "Password",
+    "titleGreeting": "We are glad, to welcome you",
+    "subtitleFilledFields": "Register and start working fully with the system.",
+    "subtitleClickBtnIndividual": "If you want register as a company, click on the button below.",
+    "btnCompany": "Company",
+    "titleCompany": "Create company account",
+    "subtitleDescriptionForLegal": "Register and go through identification on the profile page to confirm a company.",
+    "subtitleClickBtnLegal": "If you want register as an individual, click on the button below.",
+    "companyName": "Company name",
+    "companyCode": "Company code",
+    "fullName": "Full name of contact face",
+    "btnIndividual": "Individual",
+    "signUpBtn": "Sign Up"
+  },
   "addCargo": {
     "vehiclesTitle": "Vehicles",
     "seaTitle": "Sea transport",
@@ -80,6 +106,7 @@
   },
   "searchCargo": {
     "title": "Search cargo",
+    "bannerText": "To search for a cargo, you need to enter the city or country and specify the type of transportation",
     "selectCountry": "Select country",
     "fromWhere": "From where",
     "whereTo": "Where to",
@@ -274,7 +301,7 @@
     "contactInformation": "Contact information",
     "fullName": "Full name",
     "email": "Email",
-    "phoneNumber": "Phone number",
+    "phoneNumber": "Phone",
     "lastVisit": "Last visit",
     "informationAboutCompany": "Information about company",
     "name": "Company name",
@@ -293,11 +320,36 @@
     "save": "Save",
     "add": "Add",
     "surname": "Surname",
-    "name": "Name",
+    "name": "First name",
     "patronymic": "Patronymic",
-    "phone": "Mobile phone",
+    "phone": "Phone",
     "cancel": "Cancel",
     "newPassword": "New password",
     "newPasswordAgain": "New password again"
+  },
+  "adminPanel": {
+    "dashboard": "Dashboard",
+    "profile": "Profile",
+    "users": "Users",
+    "offers": "Offers",
+    "notifications": "Notifications",
+    "titleRegistrationCard": "User Registrations",
+    "titleCargoCard": "Added Cargo",
+    "titleTransportCard": "Added Transport",
+    "titleCargoOffersTotal": "Cargo offers total",
+    "titleCargoOffersToday": "Cargo offers today",
+    "titleTransportOffersTotal": "Transport offers total",
+    "titleTransportOffersToday": "Transport offers today",
+    "titleAllUsers": "All users",
+    "companyName": "Company name",
+    "companyCode": "Company code",
+    "titleAllCargo": "All cargo",
+    "titleAllTransport": "All transport",
+    "titleIdentificationCompany": "Identification company",
+    "name": "Name",
+    "code": "Code",
+    "textAboutConfirmation": "Are you sure you want, to verify your identify?",
+    "confirmBtn": "Confirm",
+    "updateBtn": "Update"
   }
 }
