--- a/locales/ru.json
+++ b/locales/ru.json
@@ -19,6 +19,32 @@
     "logout": "Выйти",
     "authorization": "Авторизация"
   },
+  "authAndReg": {
+    "titleSignIn": "Авторизация",
+    "titleRegisterPage": "Страница регистрации",
+    "itemRegisterPage": "Зарегистрироваться",
+    "btnLogin": "Войти",
+    "titleIndividual": "Создать аккаунт физического лица",
+    "lastName": "Фамилия",
+    "firstName": "Имя",
+    "patronymic": "Отчество",
+    "selectCity": "Введите город",
+    "phone": "Телефон",
+    "email": "Эл. адрес",
+    "password": "Пароль",
+    "titleGreeting": "Рады приветствовать вас",
+    "subtitleFilledFields": "Регистрируйтесь и приступайте к полноценной работе с системой.",
+    "subtitleClickBtnIndividual": "Если вы хотите зарегистрироваться, как юридическое лицо, нажмите на кнопку ниже.",
+    "btnCompany": "Компания",
+    "subtitleDescriptionForLegal": "Регистрируйтесь и проходите идентификацию на страничке профиля, для подтверждения компании.",
+    "subtitleClickBtnLegal": "Если вы хотите зарегистрироваться, как физическое лицо, нажмите на кнопку ниже.",
+    "btnIndividual": "Физическое лицо",
+    "titleCompany": "Создать аккаунт юридического лица",
+    "companyName": "Наименование компании",
+    "companyCode": "Код компании",
+    "fullName": "ФИО контактного лица",
+    "signUpBtn": "Зарегистрироваться"
+  },
   "addCargo": {
     "vehiclesTitle": "Автотранспорт",
     "seaTitle": "Морской",
@@ -80,6 +106,7 @@
   },
   "searchCargo": {
     "title": "Поиск груза",
+    "bannerText": "Для поиска груза, необходимо ввести город или страну и указать тип транспортировки",
     "selectCountry": "Выберите страну",
     "fromWhere": "Откуда",
     "whereTo": "Куда",
@@ -298,5 +325,30 @@
     "cancel": "Отменить",
     "newPassword": "Новый пароль",
     "newPasswordAgain": "Новый пароль ещё раз"
+  },
+  "adminPanel": {
+    "dashboard": "Главная",
+    "profile": "Профиль",
+    "users": "Пользователи",
+    "offers": "Заявки",
+    "notifications": "Уведомления",
+    "titleRegistrationCard": "Регистрации пользователей",
+    "titleCargoCard": "Добавленые грузы",
+    "titleTransportCard": "Добавленый транспорт",
+    "titleCargoOffersTotal": "Заявок на груз всего",
+    "titleCargoOffersToday": "Заявок на груз сегодня",
+    "titleTransportOffersTotal": "Заявок на транспорт всего",
+    "titleTransportOffersToday": "Заявок на транспорт сегодня",
+    "titleAllUsers": "Все пользователи",
+    "companyName": "Наименование компании",
+    "companyCode": "Код компании",
+    "titleAllCargo": "Все грузы",
+    "titleAllTransport": "Весь транспорт",
+    "titleIdentificationCompany": "Идентификация компании",
+    "name": "Наименование",
+    "code": "Код",
+    "textAboutConfirmation": "Вы уверены, что хотите подтвердить идентификацию?",
+    "confirmBtn": "Подтвердить",
+    "updateBtn": "Обновить"
   }
 }
