--- a/locales/ua.json
+++ b/locales/ua.json
@@ -19,6 +19,32 @@
     "logout": "Вийти",
     "authorization": "Авторизація"
   },
+  "authAndReg": {
+    "titleSignIn": "Авторизація",
+    "titleRegisterPage": "Сторінка реєстрації",
+    "itemRegisterPage": "Реєстрація",
+    "btnLogin": "Увійти",
+    "titleIndividual": "Створити акаунт фізичної особи",
+    "lastName": "Прізвище",
+    "firstName": "Ім'я",
+    "patronymic": "По батькові",
+    "selectCity": "Введіть місто",
+    "phone": "Телефон",
+    "email": "Ел. адреса",
+    "password": "Пароль",
+    "titleGreeting": "Раді вітати вас",
+    "subtitleFilledFields": "Реєструйтесь та приступайте до повноцінної роботи з системою.",
+    "subtitleClickBtnIndividual": "Якщо ви хочете зареєструватись, як юридична особа, натисніть на кнопку нижче.",
+    "btnCompany": "Компанія",
+    "titleCompany": "Створити акаунт юридичної особи",
+    "subtitleDescriptionForLegal": "Реєструйтесь та проходьте ідентифікацію на сторінці профілю, для підтвердження компанії.",
+    "subtitleClickBtnLegal": "Якщо ви хочете зареєструватись, як фізична особа, натисніть на кнопку нижче.",
+    "companyName": "Найменування компанії",
+    "companyCode": "Код компанії",
+    "fullName": "ПІБ контактної особи",
+    "btnIndividual": "Фізична особа",
+    "signUpBtn": "Зареєструватись"
+  },
   "addCargo": {
     "vehiclesTitle": "Автотранспорт",
     "seaTitle": "Морський",
@@ -80,6 +106,7 @@
   },
   "searchCargo": {
     "title": "Пошук вантажу",
+    "bannerText": "Для пошуку вантажу, необхідно ввести місто або країну та вказати тип транспортування",
     "selectCountry": "Оберіть країну",
     "fromWhere": "Звідки",
     "whereTo": "Куди",
@@ -300,5 +327,30 @@
     "cancel": "Скасувати",
     "newPassword": "Новий пароль",
     "newPasswordAgain": "Новий пароль ще раз"
+  },
+  "adminPanel": {
+    "dashboard": "Головна",
+    "profile": "Профіль",
+    "users": "Користувачі",
+    "offers": "Заявки",
+    "notifications": "Повідомлення",
+    "titleRegistrationCard": "Реєстрації користувачів",
+    "titleCargoCard": "Додані вантажі",
+    "titleTransportCard": "Доданий транспорт",
+    "titleCargoOffersTotal": "Заявок на вантаж всього",
+    "titleCargoOffersToday": "Заявок на вантаж сьогодні",
+    "titleTransportOffersTotal": "Заявок на транспорт всього",
+    "titleTransportOffersToday": "Заявок на транспорт сьогодні",
+    "titleAllUsers": "Усі користувачі",
+    "companyName": "Найменування компанії",
+    "companyCode": "Код компанії",
+    "titleAllCargo": "Всі вантажі",
+    "titleAllTransport": "Весь транспорт",
+    "titleIdentificationCompany": "Ідентифікація компанії",
+    "name": "Найменування",
+    "code": "Код",
+    "textAboutConfirmation": "Ви впевнені, що хочете підтвердити ідентифікацію?",
+    "confirmBtn": "Підтвердити",
+    "updateBtn": "Оновити"
   }
 }
